# Mandelbrot

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
